[gd_scene load_steps=8 format=2]

[ext_resource path="res://art/2d/bar_back.png" type="Texture" id=1]
[ext_resource path="res://art/2d/bar.png" type="Texture" id=2]
[ext_resource path="res://scenes/MenuFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://script/OrderCard.gd" type="Script" id=4]
[ext_resource path="res://UI/theme/order_card_theme.tres" type="Theme" id=5]
[ext_resource path="res://art/2d/Illustration.png" type="Texture" id=6]
[ext_resource path="res://art/dice-target.png" type="Texture" id=7]

[node name="OrderCard" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
script = ExtResource( 4 )

[node name="Panel" type="TextureRect" parent="."]
margin_right = 220.0
margin_bottom = 160.0
texture = ExtResource( 6 )

[node name="Vertical" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Center" type="CenterContainer" parent="Panel/Vertical"]
margin_right = 220.0
margin_bottom = 71.0

[node name="Margin" type="MarginContainer" parent="Panel/Vertical/Center"]
margin_left = 18.0
margin_right = 202.0
margin_bottom = 71.0
custom_constants/margin_right = 0
custom_constants/margin_top = 25
custom_constants/margin_left = 0
custom_constants/margin_bottom = 4

[node name="TimeBar" type="TextureProgress" parent="Panel/Vertical/Center/Margin"]
modulate = Color( 0, 1, 0, 1 )
margin_top = 25.0
margin_right = 184.0
margin_bottom = 67.0
value = 50.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 2 )

[node name="Center2" type="CenterContainer" parent="Panel/Vertical"]
margin_top = 75.0
margin_right = 220.0
margin_bottom = 160.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Horizontal" type="HBoxContainer" parent="Panel/Vertical/Center2"]
margin_left = 92.0
margin_top = 42.0
margin_right = 128.0
margin_bottom = 42.0

[node name="Margin" type="MarginContainer" parent="Panel/Vertical/Center2/Horizontal"]
margin_right = 16.0
custom_constants/margin_right = 8
custom_constants/margin_left = 8

[node name="Picture" type="TextureRect" parent="Panel/Vertical/Center2/Horizontal/Margin"]
margin_left = -46.795
margin_top = -27.796
margin_right = -46.795
margin_bottom = -27.796
rect_scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 7 )
expand = true
stretch_mode = 3

[node name="Margin2" type="MarginContainer" parent="Panel/Vertical/Center2/Horizontal"]
margin_left = 20.0
margin_right = 36.0
custom_constants/margin_right = 8
custom_constants/margin_left = 8

[node name="Label" type="RichTextLabel" parent="Panel/Vertical/Center2/Horizontal/Margin2"]
margin_left = 20.682
margin_top = -12.106
margin_right = 120.682
margin_bottom = 67.894
custom_fonts/normal_font = ExtResource( 3 )
text = "50"

[node name="Tween" type="Tween" parent="."]
